--- a/src/cinnamon/scss/_global.scss
+++ b/src/cinnamon/scss/_global.scss
@@ -43,9 +43,9 @@ $dark_tooltip_bg_grad: if($darken_amount < 1, darken($tooltip_bg_color, (1 - $da
 $selected_borders_color: mix($dark_bg_color, $selected_bg_color, if(lightness($dark_bg_color) < 50%, 18%, 10%));
 $borders_color: mix($dark_bg_color, $dark_fg_color, if(lightness($dark_bg_color) < 50%, 18%, 10%));
 
-// borders for buttons
-$button_border_strength: .1;
-$button_border: fade-out($button_fg_color, .06 + $button_border_strength);
+// decoration for buttons
+$button_border_strength: if(lightness($button_fg_color) > 50, .1, .2);
+$button_border: fade-out($button_fg_color, 0.88 - $button_border_strength);
 
 // scrollbar colors
 $scrollbar_bg_color:  darken($dark_bg_color, 5%);
