Cinnamon Theme - Media Keys OSD uses scroll bar colors for level bar

--- a/src/cinnamon/scss/sections/_dialogs.scss
+++ b/src/cinnamon/scss/sections/_dialogs.scss
@@ -130,11 +130,11 @@
 	.level {
 		height: 0.7em;
 		border-radius: 0.3em;
-		background-color: $dark_bg_color;
+		background-color: $scrollbar_bg_color;
 	}
 	.level-bar {
 		border-radius: 0.3em;
-		background-color: $selected_bg_color;
+		background-color: $scrollbar_slider_hover_color;
 	}
 }
 .info-osd {
