--- a/src/cinnamon/scss/sections/_overview.scss
+++ b/src/cinnamon/scss/sections/_overview.scss
@@ -7,7 +7,7 @@
 }
 .workspace-thumbnails-background {
     padding: 10px;
-    border: 1px solid $borders_color;
+    border: 1px solid $exterior_border;
     border-radius: $roundness;
     @extend %bg-grad-to-right;
 }
@@ -26,14 +26,13 @@
     border-left: 1px solid;
     border-bottom: 1px solid;
     border-color: $button_border;
-    transition-duration: 150;
     &:hover {
         background-image: url(assets/add-workspace-hover.png);
-        border-color: $selected_borders_color;
+        border-color: $selected_border;
     }
     &:active {
         background-image: url(assets/add-workspace.png);
-        border-color: $selected_borders_color;
+        border-color: $selected_border;
         background-color: $success_color;
     }
 }
@@ -48,11 +47,11 @@
     background-color: $dark_bg_color_trans;
 }
 .workspace-thumbnail-indicator {
-    border: 2px solid $borders_color;
+    border: 2px solid $exterior_border;
 }
 .window-caption {
     padding: 10px;
-    border: 1px solid $borders_color;
+    border: 1px solid $exterior_border;
     border-radius: $roundness;
     @extend %bg-grad-to-bottom;
     padding: 2px 8px;
@@ -76,7 +75,7 @@
     background-image: url(assets/trash-icon.png);
     background-size: 100px;
     background-color: $dark_bg_color_trans;
-    border: 1px solid $borders_color;
+    border: 1px solid $exterior_border;
     border-bottom-width: 0;
     border-radius: 20px 20px 0 0;
     height: 120px;
@@ -86,14 +85,14 @@
     @extend %bg-grad-to-bottom;
 }
 .expo-workspace-thumbnail-frame {
-    border: 1px solid $borders_color;
+    border: 1px solid $exterior_border;
     &#active {
-        border: 1px solid $selected_borders_color;
+        border: 1px solid $selected_border;
     }
 }
 .expo-workspaces-name-entry {
     padding: 10px;
-    border: 1px solid $borders_color;
+    border: 1px solid $exterior_border;
     border-radius: $roundness;
     @extend %bg-grad-to-bottom;
     selected-color: $selected_fg_color;
@@ -107,13 +106,13 @@
         @extend %selected-bg-grad-to-bottom;
         selected-color: $dark_fg_color;
         selection-background-color: $selected_bg_color;
-        border: 1px solid $selected_borders_color;
+        border: 1px solid $selected_border;
     }
     &:focus {
-        border: 1px solid $selected_borders_color;
+        border: 1px solid $selected_border;
     }
     &:hover {
-        border: 1px solid $selected_borders_color;
+        border: 1px solid $selected_border;
     }
 }
 // hot corners animation
