--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -676,7 +676,7 @@ $button_border_width: 1px;
 
         box button, box entry {
             @extend %linked_button;
-            padding: $spacing ($spacing + 2px);
+            padding: $spacing + 2px ($spacing + 2px);
         }
 
         .linked:not(.vertical) > & > box > button.combo {
