--- a/src/gtk-3.20/scss/widgets/_menu.scss
+++ b/src/gtk-3.20/scss/widgets/_menu.scss
@@ -48,7 +48,7 @@ $menu_borders_color: mix(
 
         > menuitem {
             min-height: 16px;
-            padding: $spacing*1.5 $spacing * 2.5;
+            padding: ($spacing + 2px) ($spacing + 4px);
             border: 1px solid transparent;
             background-color: transparent;
             background-image: none;
@@ -105,7 +105,7 @@ $menu_borders_color: mix(
         menuitem {
             min-height: 16px;
             min-width: 40px;
-            padding: $spacing;
+            padding: ($spacing + 3px) ($spacing + 2px);
             border-radius: 0;
 
             &:active, &:hover {
