--- a/src/gtk-3.20/scss/widgets/_menu.scss
+++ b/src/gtk-3.20/scss/widgets/_menu.scss
@@ -47,7 +47,7 @@ $menu_borders_color: mix(
         color: $menubar_fg_color;
 
         > menuitem {
-            min-height: 16px;
+            min-height: 10px + $spacing * 2;
             padding: ($spacing + 2px) ($spacing + 4px);
             border: 1px solid transparent;
             background-color: transparent;
@@ -103,9 +103,9 @@ $menu_borders_color: mix(
         }
 
         menuitem {
-            min-height: 16px;
+            min-height: 10px + $spacing * 2;
             min-width: 40px;
-            padding: ($spacing + 3px) ($spacing + 2px);
+            padding: ($spacing + 2px) ($spacing + 2px);
             border-radius: 0;
 
             &:active, &:hover {
@@ -306,7 +306,7 @@ $menu_borders_color: mix(
     menuitem.button.flat {
         @extend %undecorated_button;
 
-        padding: $spacing ($spacing + 2px);
+        padding: ($spacing + 2px) ($spacing + 2px);
         outline-color: transparent;
         transition: none;
 
