GTK3 - Port GTK3.20 button styling to GTK3

--- a/src/gtk-3.0/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.0/scss/widgets/_toolbar.scss
@@ -28,9 +28,9 @@
         padding: 0 ($spacing * 2);
     }
 
-    .button { @include button($header_button_bg_color, $header_button_fg_color); }
+    .button { @include button($toolbar_bg_color, $toolbar_fg_color); }
 
-    .button.linked, .linked .button { @include linked_button($header_button_bg_color); }
+    .button.linked, .linked .button { @include linked_button($toolbar_bg_color); }
 
     GtkComboBox, .button {
         padding: $spacing - 1px;
