GTK3 - Port GTK3.20 menu spacing to GTK3

--- a/src/gtk-3.0/scss/widgets/_button.scss
+++ b/src/gtk-3.0/scss/widgets/_button.scss
@@ -372,5 +372,9 @@
         &:last-child > .button { @extend %linked_button:last-child; }
 
         &:only-child > .button { @extend %linked_button:only-child; }
+
+        menu menuitem {
+            padding: $spacing ($spacing + 2px);
+        }
     }
 }
