GTK3 - Port GTK3.20 menu styling to GTK3 - update border_focus function

--- a/src/gtk-3.0/scss/_functions.scss
+++ b/src/gtk-3.0/scss/_functions.scss
@@ -37,7 +37,7 @@ $modules: () !default;
 }
 
 @function border_focus($color) {
-    @return shade($color, ($contrast - .05));
+    @return if($variant == 'light', mix($selected_bg_color, $color, .3), darken($selected_bg_color, 20%));
 }
 
 @function border_active($color) {
