--- a/src/gtk-3.0/scss/widgets/_menu.scss
+++ b/src/gtk-3.0/scss/widgets/_menu.scss
@@ -55,7 +55,7 @@
     #toolbar-popup, .menu {
         padding: 0;
         border-radius: 0;
-        border: 0;
+        border: 1px solid mix($menu_bg_color, $menu_fg_color, .21);
         background-color: $menu_bg_color;
         color: $menu_fg_color;
 
