--- a/src/cinnamon/scss/_extends.scss
+++ b/src/cinnamon/scss/_extends.scss
@@ -165,7 +165,7 @@
     -gradient-height: 3px;
     -gradient-start: $selected_bg_color;
     -gradient-end: $dark_bg_color;
-    -margin-horizontal: 1em;
+    -margin-horizontal: 4px;
     height: 1em;
 }
 
