Cinnamon theme - fix user applet icon border, keyboard layout applet, menu title font-size. Amend sliders. Add additional font-families.

--- a/src/cinnamon/scss/sections/_stage.scss
+++ b/src/cinnamon/scss/sections/_stage.scss
@@ -1,7 +1,7 @@
 // defines font family and standard font size across the whole theme
 // em is preferred for better support for text scaling
 stage {
-    font-family: sans, sans-serif;
+    font-family: roboto, Noto Sans, sans, sans-serif;
     font-size: 1em;
 }
 .cinnamon-link {
