feat(gtk320: toggle): apply  to checkboxes and radios

--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -51,15 +51,15 @@ $suffix: if($variant == "dark", "-dark", "");
 @include exports("checkradio") {
     radio {
         @include toggle("radio");
-        min-width: 16px;
-        min-height: 16px;
+        min-width: 10px + $spacing * 2;
+        min-height: 10px + $spacing * 2;
         margin-right: $spacing;
     }
 
     check {
         @include toggle("checkbox");
-        min-width: 16px;
-        min-height: 16px;
+        min-width: 10px + $spacing * 2;
+        min-height: 10px + $spacing * 2;
         margin-right: $spacing;
     }
 
