feat(gtk3, gtk3.20: view): add bg/fg styling for `viewport` widget

--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -226,5 +226,10 @@
 
     /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
     GtkScrolledWindow GtkViewport.frame { border: 0; }
+
+    GtkViewport {
+        background-color: mix($base_color, $bg_color, .28);
+        color: mix($text_color, $fg_color, .28);
+    }
 }
 
