--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -351,6 +351,11 @@
 
     /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
     scrolledwindow viewport.frame { border: 0; }
+
+    viewport {
+        background-color: mix($base_color, $bg_color, .28);
+        color: mix($text_color, $fg_color, .28);
+    }
 }
 
 
