--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -224,12 +224,13 @@
         &.flat { border: 0; }
     }
 
-    /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
-    GtkScrolledWindow GtkViewport.frame { border: 0; }
-
     GtkViewport {
         background-color: mix($base_color, $bg_color, .28);
         color: mix($text_color, $fg_color, .28);
+        border: 1px solid border_normal(mix($base_color, $bg_color, .78));
     }
+
+    /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
+    GtkScrolledWindow GtkViewport.frame { border: 0; }
 }
 
