--- a/src/gtk-3.0/scss/_functions.scss
+++ b/src/gtk-3.0/scss/_functions.scss
@@ -12,7 +12,7 @@ $modules: () !default;
     @if type-of($color) == "color" {
         @return fade-out($color, (1 - $amount));
     } @else {
-        @return unquote("alpha(#{$color},#{$amount})");
+        @return unquote("alpha(#{$color}," + $amount + "})");
     }
 }
 
@@ -24,12 +24,12 @@ $modules: () !default;
             @return darken($color, (1 - $amount) * lightness($color))
         }
     } @else {
-        @return unquote("shade(#{$color},#{$amount})");
+        @return unquote("shade(#{$color}," + $amount + "})");
     }
 }
 
 @function mix($color1, $color2, $amount) {
-    @return unquote("mix(#{$color1},#{$color2},#{$amount})");
+    @return unquote("mix(#{$color1},#{$color2}," + $amount + "})");
 }
 
 @function border_normal($color) {
