--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -154,6 +154,10 @@
             padding: $spacing if($spacing > 8px, $spacing, 8px);
         }
 
+        box button {
+            padding: $spacing + 2px;
+        }
+
         button.titlebutton + separator.titlebutton {
             margin-left: 0;
             margin-right: $spacing;
