fix(gtk320: toolbar): window controls' padding - 3

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -155,7 +155,7 @@
         }
 
         box button {
-            padding: $spacing + 1px;
+            padding: $spacing;
         }
 
         button.titlebutton + separator.titlebutton {
