fix(gtk320: toolbar): partially revert padding change for image button

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -40,10 +40,10 @@
         padding: $spacing;
 
         &.text-button { padding: $spacing; }
+    }
 
-        &.image-button {
-            padding: $spacing $spacing + 4px;
-        }
+    box button.image-button {
+        padding: $spacing $spacing + 4px;
     }
 
     separator {
