--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -167,7 +167,10 @@
             padding: $spacing if($spacing > 8px, $spacing, 8px);
 
             &.flat {
-                color: $titlebar_fg_focused;
+                color: $menubar_fg_color;
+            }
+            &.flat:hover {
+                color: $header_button_fg_color;
             }
 
             &.image-button {
