--- a/src/gtk-3.0/scss/widgets/_window.scss
+++ b/src/gtk-3.0/scss/widgets/_window.scss
@@ -25,8 +25,8 @@
         &.tiled { border-radius: 0; }
 
         &.solid-csd {
-            border-radius: $roundness $roundness 0 0;
-            margin: 1px;
+            border-radius: 0;
+            margin: 0;
             background-color: mix(shade($titlebar_bg_focused, 0.7), $titlebar_fg_focused, 0.21);
             box-shadow: none;
         }
