--- a/src/gtk-3.20/scss/apps/_unity.scss
+++ b/src/gtk-3.20/scss/apps/_unity.scss
@@ -11,9 +11,9 @@
 
         -UnityDecoration-shadow-offset-x: 1px;
         -UnityDecoration-shadow-offset-y: 1px;
-        -UnityDecoration-active-shadow-color: rgba(0, 0, 0, .7);
+        -UnityDecoration-active-shadow-color: transparentize($black, .7);
         -UnityDecoration-active-shadow-radius: 8px;
-        -UnityDecoration-inactive-shadow-color: rgba(0, 0, 0, .5);
+        -UnityDecoration-inactive-shadow-color: transparentize($black, .5);
         -UnityDecoration-inactive-shadow-radius: 5px;
 
         -UnityDecoration-glow-size: 10px;
