fix(gtk3*: view): style viewport only inside scrolledwindow
re: oomox/#181

--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -224,13 +224,13 @@
         &.flat { border: 0; }
     }
 
-    GtkViewport {
+    GtkScrolledWindow GtkViewport {
         background-color: mix($base_color, $bg_color, .28);
         color: mix($text_color, $fg_color, .18);
         border: 1px solid border_normal(mix($base_color, $bg_color, .78));
+
+        /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
+        &.frame { border: 0; }
     }
 
-    /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
-    GtkScrolledWindow GtkViewport.frame { border: 0; }
 }
-
