fix(gtk3*: view): more precise css selector for stylable viewport
re: #62

--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -224,7 +224,8 @@
         &.flat { border: 0; }
     }
 
-    GtkViewport {
+    GtkNotebook GtkScrolledWindow GtkViewport,
+    :not(GtkNotebook) GtkScrolledWindow GtkViewport frame {
         background-color: mix($base_color, $bg_color, .28);
         color: mix($text_color, $fg_color, .18);
         border: 1px solid border_normal(mix($base_color, $bg_color, .78));
