--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -349,7 +349,8 @@
         }
     }
 
-    viewport {
+    notebook scrolledwindow viewport,
+    :not(notebook) scrolledwindow viewport frame {
         background-color: mix($base_color, $bg_color, .28);
         color: mix($text_color, $fg_color, .18);
         border: 1px solid border_normal(mix($base_color, $bg_color, .78));
