fix(gtk3*: view): style content-view instead of viewport
re: #62

--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -224,14 +224,9 @@
         &.flat { border: 0; }
     }
 
-    GtkNotebook GtkScrolledWindow GtkViewport,
-    :not(GtkNotebook) GtkScrolledWindow GtkViewport frame {
+    .content-view {
         background-color: mix($base_color, $bg_color, .28);
         color: mix($text_color, $fg_color, .18);
         border: 1px solid border_normal(mix($base_color, $bg_color, .78));
     }
-
-    /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
-    GtkScrolledWindow GtkViewport.frame { border: 0; }
 }
-
