--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -349,15 +349,11 @@
         }
     }
 
-    notebook scrolledwindow viewport,
-    :not(notebook) scrolledwindow viewport frame {
+    .content-view {
         background-color: mix($base_color, $bg_color, .28);
         color: mix($text_color, $fg_color, .18);
         border: 1px solid border_normal(mix($base_color, $bg_color, .78));
     }
-
-    /* avoid double borders when a viewport is packed into a GtkScrolledWindow */
-    scrolledwindow viewport.frame { border: 0; }
 
 }
 
@@ -387,4 +383,3 @@
         }
     }
 }
-
