style(gtk3*): scss-lint

--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -77,7 +77,7 @@
                          1px 0   $disabled_checkradio_border inset,
                          0  -1px $disabled_checkradio_border inset,
                          0   1px $disabled_checkradio_border inset;
-            background-color: rgba($base_color, 0.25);
+            background-color: rgba($base_color, .25);
             //background-color: transparent;
         }
 
