fix(gtk320: sidebar): don't style list to be transparent (because it inherits window, not sidebar)

--- a/src/gtk-3.20/scss/widgets/_sidebar.scss
+++ b/src/gtk-3.20/scss/widgets/_sidebar.scss
@@ -30,7 +30,7 @@
 
         .frame, frame { border-width: 0; }
 
-        list { background-color: transparent; }
+        //list { background-color: transparent; }
 
         paned & { &.left, &.right, &.left:dir(rtl), &:dir(rtl), &:dir(ltr), & { border-style: none; } }
     }
