feat(gtk320: view): iconview roundness

--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -35,7 +35,13 @@
 
     textview border { background-color: mix($bg_color, $base_color, .5); }
 
-    iconview { @extend .view; }
+    iconview {
+        @extend .view;
+
+        :selected {
+            border-radius: $roundness;
+        }
+    }
 }
 
 
