fix(gtk320: toggle): fix checks and radios inside menus after check/radio refactoring

--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -81,10 +81,12 @@
             //background-color: transparent;
         }
 
+        menuitem &:disabled, modelbutton &:disabled,
         menuitem &, modelbutton & {
             box-shadow: none;
             border-radius: 0;
             background-color: transparent;
+            border: none;
         }
     }
 
