fix(gtk320: toggle, view): fix checks and radios inside treeview after check/radio refactoring

--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -88,6 +88,11 @@
             background-color: transparent;
             border: none;
         }
+
+        textview &:focus, .view &:focus, view &:focus, treeview &:focus {
+            background-color: $base_color;
+        }
+
     }
 
     radio {
