--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -17,9 +17,9 @@
 
         &:selected {
             &:focus, & {
-                @extend %selected_items;
+                //@extend %selected_items;
 
-                border-radius: $roundness;
+                //border-radius: $roundness;
             }
         }
     }
