--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -86,7 +86,7 @@
             box-shadow: none;
             border-radius: 0;
             background-color: transparent;
-            border: none;
+            border: 0;
         }
 
         textview &:focus, .view &:focus, view &:focus, treeview &:focus {
