--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -472,8 +472,8 @@ $button_border_width: 1px;
         &.circular,
         &.circular-button { // FIXME: aggregate to buttons
             padding: 0;
-            min-width: 28px;
-            min-height: 28px;
+            min-width: 22px + $spacing * 2;
+            min-height: 22px + $spacing * 2;
             border-radius: 9999px; // Fixed: https://github.com/GNOME/gtk/commit/a6409458f0d50d673a4dc370b9251993b7835b6b
             -gtk-outline-radius: 9999px;
 
