--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -670,8 +670,8 @@ $button_border_width: 1px;
 
         arrow {
             -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
-            min-height: 16px;
-            min-width: 16px;
+            min-height: 10px + $spacing * 2;
+            min-width: 10px + $spacing * 2;
         }
 
         box button, box entry {
