feat(gtk320: button, entry): unify left/right padding and make it depend on roundness to make text readable on the sides in case of too big border radius

--- a/src/gtk-3.20/scss/widgets/_entry.scss
+++ b/src/gtk-3.20/scss/widgets/_entry.scss
@@ -154,7 +154,9 @@
     @include linear-gradient($bg, to top);
     @include border(mix($bg, $fg, .2));
 
-    padding: ($spacing + 2px) $spacing;
+    //padding: ($spacing + 2px) $spacing;
+    $sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 1px));
+    padding: ($spacing + 2px) $sidepadding;
 
     color: $fg;
     caret-color: $primary_caret_color;
