--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -4,6 +4,7 @@
 
 $button_outline_radius: $roundness * (1 + ($button_outline_offset / 1px + 2) / 10);
 $button_border_width: 1px;
+$button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 1px));
 
 @include exports("button_extends") {
     // stuff for .needs-attention
@@ -48,13 +49,18 @@ $button_border_width: 1px;
     %button {
         min-height: 14px + $spacing * 2;
         min-width: 14px + $spacing * 2;
-        padding: $spacing ($spacing * 2 - 1px);
+        //padding: $spacing ($spacing * 2 - 1px);
+        padding: $spacing;
         border-width: $button_border_width;
         border-style: solid;
         border-radius: $roundness;
         -gtk-outline-radius: $button_outline_radius;
         transition: 150ms ease;
         outline-color: transparent;
+
+        &.text-button {
+            padding: $spacing $button_sidepadding;
+        }
     }
 
     %undecorated_button {
@@ -434,6 +440,7 @@ $button_border_width: 1px;
 
         &:disabled { color: alpha($bg, .85); }
     }
+
 }
 
 @include exports("button") {
@@ -491,6 +498,9 @@ $button_border_width: 1px;
 
         button {
             color: $button_fg_color;
+            //padding: $spacing;
+            padding: $spacing ($spacing * 2 - 1px);
+            //padding: $spacing ($spacing * 2);
 
             &:active, &:checked, &:hover {
                 @include linear-gradient(shade($button_bg_color, 1.2));
@@ -664,19 +674,27 @@ $button_border_width: 1px;
         button.combo {
             // otherwise the arrow placement is not symmetric
             min-width: 0;
-            padding-left: $spacing * 2 - 1px;
-            padding-right: $spacing * 2 - 1px;
+            //padding-left: $spacing * 2 - 1px;
+            //padding-right: $spacing * 2 - 1px;
+            padding-left: $button_sidepadding;
+            padding-right: $button_sidepadding;
         }
 
         arrow {
             -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
             min-height: 10px + $spacing * 2;
             min-width: 10px + $spacing * 2;
+            padding: $spacing / 2;
         }
 
         box button, box entry {
             @extend %linked_button;
-            padding: $spacing ($spacing * 2 - 1px);
+            //padding: $spacing ($spacing * 2 - 1px);
+            padding: $spacing $button_sidepadding;
+        }
+
+        box > entry + button.combo {
+            padding: $spacing;
         }
 
         .linked:not(.vertical) > & > box > button.combo {
