fix(gtk320: toggle: switch): reduce width, new gtk 3.24.3 use circle icon from noto-fonts instead of Off label

--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -133,11 +133,13 @@
         border: 0;
         outline: none;
         transition: background-color .3s linear;
-        min-width: 88px;
-        min-height: 24px;
+        //min-width: 88px;
+        min-width: 66px + $spacing * 4;
+        min-height: 18px + $spacing * 2;
         background-color: $switch_bg_color;
         color: $switch_fg_color;
         box-shadow: inset 1px -1px 0 alpha($dark_shadow, .06), inset -1px 1px 0 alpha($dark_shadow, .06);
+        font-size: 90%;
 
         slider {
             background-color: $switch_slider_bg_color;
